# stash-of-exile

./: .gitignore  .pylintrc  LICENSE  README.md  altart.json  cli.py  pyproject.toml  release.sh  stashofexile.spec  styles.qss
assets/: altart.json  bases.json  styles.qss  tab1.json  tab2.json
src/: api.py  apimanager.py  app.py  consts.py  download.py  filter.py  gameData.py  item.py  itemtab.py  log.py  loginwidget.py  main.py  mainwidget.py  mainwidget_test.py  mainwindow.py  property.py  requirement.py  save.py  styles.qss  tab.py  table.py  tabswidget.py  test.py  thread.py  util.py
src/stashofexile/: app.py  consts.py  file.py  gamedata.py  log.py  mainwindow.py  save.py  table.py
src/stashofexile/assets/: altart.json
src/stashofexile/items/: filter.py  item.py  moddb.py  modfilter.py  requirement.py  socket.py  tab.py
src/stashofexile/threads/: api.py  download.py
src/stashofexile/widgets/: editcombo.py  filterwidget.py  (+4 more)
stashofexile/: app.py  consts.py  file.py  gamedata.py  log.py  mainwindow.py  save.py  styles.qss  tab.py  table.py  util.py
stashofexile/item/: filter.py  item.py  moddb.py  property.py  requirement.py
stashofexile/items/: filter.py  item.py  moddb.py  modfilter.py  property.py  requirement.py  socket.py  tab.py
stashofexile/thread/: api.py  download.py  ratelimiting.py  thread.py
stashofexile/threads/: api.py  download.py  ratelimiting.py  thread.py
stashofexile/widgets/: editcombo.py  filterwidget.py  loginwidget.py  mainwidget.py  tabswidget.py  tooltipwidget.py
tests/item/: conftest.py  test_filter.py  test_item.py
(+57 files in other folders)
